# poker-smasher

./: README.md  examples.py  main.py  poker_env.py  pyproject.toml  self_play.py  train.py  transformer_agent.py  transformer_train.py
saved_agents/: self_play_agent_0.pkl  self_play_agent_1.pkl  self_play_agent_2.pkl
